# Cluster-Chat-Server

./: .gitignore  CMakeLists.txt  README.md
include/: README.md  public.hpp
include/server/: chatserver.hpp  chatservice.hpp  user.hpp  usermodel.hpp
include/server/db/: db.h
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp  user.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/: README.md
src/client/: main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp  usermodel.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
test/: README.md  json_test.cpp  muduo_test.cpp
z_source/: README.md
z_source/databases/: README.md
